--- a/styles/layout/index/_about.scss
+++ b/styles/layout/index/_about.scss
@@ -16,7 +16,7 @@
         @include block-title();
     }
     &__body {
-        padding-left: 18rem;
+        padding-left: 20vw;
         margin-top: 4rem;
     }
     &__text {
@@ -26,6 +26,7 @@
     &__values {
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         gap: 1rem;
         margin-top: 4rem;
         &-item {
