--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -81,17 +81,22 @@ img {
 	vertical-align: top;
 }
 
+html {
+	width: 100%;
+}
+
 body {
 	position: relative;
 	scrollbar-gutter: stable;
-	width: 100%;
 	min-height: 100dvh;
-	background: repeating-linear-gradient(to right, rgba($color-020109, 1), rgba($color-020109, 1) 300px, rgba($color-020109, 0.97) 1px, rgba($color-020109, 0.97) 301px);
+	width: 100%;
 	overflow-x: hidden;
+	background: repeating-linear-gradient(to right, rgba($color-020109, 1), rgba($color-020109, 1) 300px, rgba($color-020109, 0.97) 1px, rgba($color-020109, 0.97) 301px);
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-  &.block-scroll {
-    overflow: hidden;
-  }
+	&.block-scroll {
+		background-color: rgba($color-020109, 1);
+		overflow-y: scroll;
+	}
 }
