--- a/styles/components/modals/_dropdown.scss
+++ b/styles/components/modals/_dropdown.scss
@@ -10,6 +10,7 @@
 	padding-bottom: 6rem;
 	color: $color-D6D0C6;
 	background-color: $color-020109;
+    color: inherit;
 	pointer-events: none;
 	translate: -100% 0;
 	transition: translate $duration ease;
