--- a/styles/layout/index/_intro.scss
+++ b/styles/layout/index/_intro.scss
@@ -2,7 +2,7 @@
 	position: relative;
     overflow: hidden;
 	min-height: 100dvh;
-	height: 100dvh;
+	min-height: 100dvh;
 	padding: $size-40px 0;
 	&__container {
 		@include content-width();
@@ -16,17 +16,14 @@
 		font-weight: $fw-660;
 		display: flex;
 		align-items: center;
-		gap: 2rem;
+		gap: 2vw;
 	}
 	&__title {
-		text-transform: lowercase;
-		font-size: $size-256px;
-		line-height: calc($size-256px / 1.3);
+		@include fs-text(18vw, $size-256px, $size-96px);
 	}
 	&__subtitle {
+		@include fs-text(5vw, $size-56px, $size-24px);
 		text-transform: uppercase;
-		font-size: $size-56px;
-		line-height: $size-56px;
 	}
 	&__contentbox {
 		display: grid;
@@ -63,7 +60,7 @@
 		}
 	}
 	&__videobox {
-		translate: 0 -140%;
+		translate: 0 -100%;
 		justify-self: flex-end;
 	}
 	&__video-wrapper {
