--- a/styles/components/modals/_modal-form.scss
+++ b/styles/components/modals/_modal-form.scss
@@ -102,3 +102,11 @@
 		}
 	}
 }
+@media (max-width: 475px) {
+    .modal-form {
+        &__title {
+            font-size: 2rem;
+            line-height: 2rem;
+        }
+    }
+}
