--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -74,7 +74,9 @@
 		position: relative;
 		width: 2rem;
 		height: 1.5rem;
+		display: none;
 		& span {
+			display: block;
 			width: 100%;
 			background-color: $color-FFFFFF;
 			height: 0.175rem;
@@ -99,6 +101,20 @@
 				top: auto;
 				bottom: 0;
 			}
+		}
+	}
+}
+
+@media (max-width: 768px) {
+	.header {
+		&__nav {
+			display: none;
+		}
+		&__tel {
+			display: none;
+		}
+		&__burger {
+			display: flex;
 		}
 	}
 }
