--- a/styles/components/modals/_touch-menu.scss
+++ b/styles/components/modals/_touch-menu.scss
@@ -32,12 +32,15 @@
 	&__closeBtn {
 		cursor: pointer;
 		position: absolute;
-		top: 1.5rem;
-		right: 2rem;
+		top: 1rem;
+		right: 1rem;
 		font-size: 1.5rem;
+        &:focus {
+            outline: none;
+        }
 	}
 	&__container {
-		padding: 6rem 2rem;
+		padding: 6rem 1rem;
 		padding-top: 5rem;
 	}
 	&__list {
