--- a/styles/layout/index/_connection.scss
+++ b/styles/layout/index/_connection.scss
@@ -14,7 +14,9 @@
 	&__links {
 		display: flex;
 		justify-content: space-between;
-		gap: 1rem;
+		flex-wrap: wrap;
+		column-gap: 4rem;
+		row-gap: 1rem;
 		&-item {
 			@include hover-replacement($color-020109, $color-FFFFFF);
 			text-transform: uppercase;
