--- a/styles/layout/index/_services.scss
+++ b/styles/layout/index/_services.scss
@@ -13,6 +13,7 @@
 	}
 	&__title {
 		@include block-title();
+		overflow-wrap: break-word
 	}
 	&__body {
 		margin-top: 6rem;
@@ -73,6 +74,13 @@
 		height: fit-content;
 		font-size: $size-13px;
 		font-weight: $fw-550;
+        display: -webkit-box;
+        -webkit-box-orient: vertical;
+        line-clamp: 5;
+        -webkit-line-clamp: 5;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-height: 11.625rem;
 	}
 	&__imagebox {
 		position: relative;
