--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -1532,6 +1532,7 @@ body {
   }
   .footer__info {
     flex-wrap: wrap;
+    row-gap: 1.5rem;
   }
   .footer__nav-item::before, .footer__link::before {
     display: none;
@@ -1719,6 +1720,7 @@ body {
   border-radius: 50%;
   background: radial-gradient(#0681ce 0%, rgba(6, 129, 206, 0.9) 50%, #00276d 100%);
   filter: blur(20px);
+  will-change: transform;
   animation: fog 20s linear infinite;
 }
 .intro__fog-layer--1 {
@@ -1973,7 +1975,7 @@ body {
 }
 .staff__fog-layer--1 {
   height: 20rem;
-  width: 90%;
+  width: 100%;
   left: -20%;
   bottom: -10rem;
 }
@@ -2735,6 +2737,7 @@ body {
   position: absolute;
   top: 0;
   width: 100%;
+  height: 100%;
   z-index: -1;
   overflow-x: clip;
   pointer-events: none;
@@ -2743,21 +2746,24 @@ body {
   position: absolute;
 }
 .connection__fog-layer--1, .connection__fog-layer--2 {
-  width: 70%;
+  width: 80%;
   border-radius: 50%;
   aspect-ratio: 1/1;
   background: radial-gradient(rgba(6, 129, 206, 0.7) 0%, #00276d 100%);
-  filter: blur(200px);
+  filter: blur(60px);
+  opacity: 0.3;
+  transform: translateZ(0);
+  will-change: transform;
 }
 .connection__fog-layer--1 {
-  height: 50rem;
+  height: 90%;
   left: 40%;
-  top: 10%;
+  top: 0%;
 }
 .connection__fog-layer--2 {
-  height: 30rem;
-  left: 20%;
-  top: 40%;
+  height: 50%;
+  left: 5%;
+  top: 30%;
 }
 
 @media (max-width: 1024px) {
@@ -2771,6 +2777,10 @@ body {
 @media (max-width: 768px) {
   .intro__titlebox {
     flex-direction: column;
+    align-items: flex-start;
+  }
+  .intro__contentbox {
+    display: flex;
     align-items: flex-start;
   }
   .intro__video-wrapper {
