--- a/styles/utils/_mixins.scss
+++ b/styles/utils/_mixins.scss
@@ -162,7 +162,7 @@
 		}
 		&--1 {
 			height: 20rem;
-			width: 90%;
+			width: 100%;
 			left: -20%;
 			bottom: -10rem;
 		}
@@ -178,6 +178,7 @@
 	position: absolute;
 	top: 0;
 	width: 100%;
+	height: 100%;
 	z-index: -1;
 	overflow-x: clip;
 	pointer-events: none;
@@ -185,21 +186,24 @@
 		position: absolute;
 		&--1,
 		&--2 {
-			width: 70%;
+			width: 80%;
 			border-radius: 50%;
 			aspect-ratio: 1/1;
 			background: radial-gradient(rgba($color-0681CE, 0.7) 0%, rgba($color-00276D, 1) 100%);
-			filter: blur(200px);
+			filter: blur(60px);
+			opacity: 0.3;
+			transform: translateZ(0);
+			will-change: transform;
 		}
 		&--1 {
-			height: 50rem;
+			height: 90%;
 			left: 40%;
-			top: 10%;
+			top: 0%;
 		}
 		&--2 {
-			height: 30rem;
-			left: 20%;
-			top: 40%;
+			height: 50%;
+			left: 5%;
+			top: 30%;
 		}
 	}
 }
