--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -88,7 +88,7 @@ html {
 body {
 	position: relative;
 	scrollbar-gutter: stable;
-	min-height: 100dvh;
+	min-height: 100vh;
 	width: 100%;
 	overflow-x: hidden;
 	background: repeating-linear-gradient(to right, rgba($color-020109, 1), rgba($color-020109, 1) 300px, rgba($color-020109, 0.97) 1px, rgba($color-020109, 0.97) 301px);
